--- a/trying_d3_index2.html
+++ b/trying_d3_index2.html
@@ -9,7 +9,14 @@
 <button id="plot_dataArray_values_to_text" onclick="plot_dataArray_values_to_text()" style="display:block;">plot_dataArray_values_to_text</button>
 
 <button id="plot_bar_graph" onclick="plot_bar_graph()" style="display:block;">plot_bar_graph</button>
-<input type="text" name="barChart_value" id="barChart_value" value="" style="display:block;">
+<!-- Drop down menu: put in body -->
+<label for="select_dropdown_option_label">Select a drop down option:</label>
+<select name="dropdown_options" id="dropdown_options" style="display:block">
+  <option value="---">Select an option</option>
+  <option value="drop_down_option0">drop_down_option0</option>
+  <option value="drop_down_option1">drop_down_option1</option>
+  <option value="drop_down_option2">drop_down_option2</option>
+</select>
 
 	
 <button id="plot_line_graph_dataArray" onclick="plot_line_graph_dataArray()" style="display:block;">plot_line_graph_dataArray</button>
@@ -27,6 +34,21 @@
 
 <script>
 
+// Put in <script>
+async function processEvent_dropdown_options(event) {
+
+	const element = document.getElementById("dropdown_options");
+	console.log('element.selectedIndex: ', element.selectedIndex);
+	
+	if (document.getElementById("dropdown_options").selectedIndex == 1) {
+		document.getElementById("text_input").style.display = 'block';
+	} else {
+		document.getElementById("text_input").style.display = 'none';
+	}
+}
+
+document.getElementById("dropdown_options").addEventListener("change", processEvent_dropdown_options, false);
+	
 // -----------------------------------------------
 
 async function use_DOM_w_d3() {
@@ -133,6 +155,9 @@ async function plot_bar_graph() {
 		.padding(padding);
 
 	// domain = the y-value range of the bars
+	const arr_sort = dataArray.sort();
+	const [min_val, max_val] = [arr_sort.at(0), arr_sort.at(arr_sort.length-1)];
+	
 	const y_scale = d3.scaleLinear()
 		.domain([0, max_val])
 		.range([h, 0]);
@@ -150,13 +175,13 @@ async function plot_bar_graph() {
 	
 	// Assign the bar chart elements on the figure
 
-	var example = document.getElementById('barChart_value').value;
+	var dropdown_option_type = document.getElementById("dropdown_options").value;
 	
 	// width = bar_width
 	// height = bar_height, the dataArray values
 	// x = the (x-location) of each bar
 	// y = the (y-location) of each bar
-	if (example == 0) {
+	if (dropdown_option_type == 'drop_down_option0') {
 
 		// Way 0: not using the scale command - did not work
 		const bar_chart = svg.selectAll('rect')
@@ -169,7 +194,7 @@ async function plot_bar_graph() {
 			.attr('y', (d,i) => d)
 			.attr("fill", "steelblue");
 
-	} else if (example == 1) {
+	} else if (dropdown_option_type == 'drop_down_option1') {
 		
 		// Way 1: using the scale command - did not work
 		const bar_chart = svg.selectAll('rect')
@@ -182,7 +207,7 @@ async function plot_bar_graph() {
 			.attr('y', (d,i) => y_scale(d))
 			.attr("fill", "steelblue");
 
-	} else if (example == 2) {
+	} else if (dropdown_option_type == 'drop_down_option2') {
 		
 		// Way 2: Class recommendation
 		const bar_chart = svg.selectAll('rect')
